[project]
name = "assignment3-ia"
version = "0.1.0"
description = "Assignment 3: Image Analysis - DNA Sequencing and Calcium Imaging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
